# private-voting

./: Makefile  README.md  foundry.toml
bytecodes/: README.md  poseidon.hex
circom/: .gitignore  Makefile  input.json  package-lock.json
circom/circuits/: main.circom  posedon2.circom  root_of_proof.circom  verify_proof.circom
client/: .gitignore  Cargo.toml
client/src/: contract.rs  hash.rs  main.rs  merkle_tree.rs
client/src/merkle_tree/: mod.rs  proof.rs  tree.rs  verify.rs
script/: PrivateVoting.s.sol
src/: IPoseidon.sol  IPrivateVoting.sol  PrivateVoting.sol
test/: Poseidon.t.sol  PrivateVoting.t.sol
