[package]
name = "private-voting-client"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.1.0", features = ["full"] }
structopt = "0.3.26"
tokio = { version = "1.48.0", features = ["full"] }

# poseidon hashing
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
light-poseidon = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
